# lobo-codes

./: .gitignore  Makefile  README.md
amelia/: README.md  index.html
amelia/static/: styles.scss
bliu/: index.html
bliu/static/: style.css
cassandra-read/: Dockerfile  Makefile
cassandra-read/cmd/: cassandra-client.go  cassandra-read.go
cassandra-read/internal/: handler.go
cassandra-read/k8s/: cassandra-client-deployment.yaml
client-server/: Makefile  go.mod
client-server/internal/: constants.go
client-server/test/: server_test.go
cmd/: k8s-http-server.go  rqlite-test.go  test-os-release.go  transfer-backup-cassandra.go  transfer-cassandra-rqlite.go
common/: footer.html  notfound.html  visitors.html
config/: k8s-http-server.yaml
docker/: Dockerfile  Dockerfile.k8s-test
domain/: index.html
h-tree/: Makefile  README.md
h-tree/internal/: h-tree.go
hikes/: .gitignore  Makefile  README.md  hugo.toml  package-lock.json  package.json
hikes/assets/: jsconfig.json
hikes/content/: _index.md  map-noframe.md  map.md
hikes/layouts/: 404.html
hikes/static/js/: map.js
hikes/tools/: generate-locations.go
hostrouter/: hostrouter.go
http-server/: Makefile  requests.db
http-server/cmd/: http-server.go  read-requests-db.go
http-server/internal/: definition.go  handler.go  request_info.go
http-server/static/: notfound.html
internal/: api_handler.go  config.go  definition.go  geo_info.go  handler.go  os_release.go  request_info.go  router.go  rqlite.go  tracer.go
ip2location/: Makefile
k8s/: lobo-codes-deployment.yaml  lobo-codes-service.yaml
k8s-http-server/: Makefile
k8s-http-server/amelia/: amelia.csv  amelia2.csv  index.html
k8s-http-server/cmd/: k8s-http-server.go  k8s-test.go  read-requests-db.go  transfer-sqlite-cassandra.go
k8s-http-server/common/: notfound.html  visitors.html
k8s-http-server/config/: k8s-http-server.yaml
k8s-http-server/docker/: Dockerfile
k8s-http-server/domain/: index.html
k8s-http-server/hostrouter/: hostrouter.go
k8s-http-server/internal/: api_handler.go  cassandra.go  config.go  definition.go  go_version.go  handler.go  kubernetes.go  os_release.go  request_info.go  tracer.go
k8s-http-server/k8s/: lobo-codes-deployment.yaml
k8s-http-server/ryan/: index.html
k8s-http-server/sheldon/: graph.html  index.html  resume.html  visitors.html
k8s-http-server/test-vue/: package-lock.json
koch-snowflake/: Makefile  README.md
koch-snowflake/internal/: koch-snowflake.go
n-body/: Makefile  README.md
n-body/internal/: body.go  n-body.go  parse-universe.go
ryan/: index.html
serve-static/: Makefile  go.mod
serve-static/cmd/: serve-static.go  serve-static2.go  serve-template.go
serve-static/internal/: definition.go  handler.go
serve-static/static/: index.html
serve-static/template/: layout.html
sheldon/: graph.html  resume.html
subdomain-http-server/: Makefile
subdomain-http-server/amelia/: index.html  test.html  visitors.html
subdomain-http-server/cmd/: read-requests-db.go  subdomain-http-server.go
subdomain-http-server/domain/: index.html  visitors.html
subdomain-http-server/hostrouter/: hostrouter.go
subdomain-http-server/internal/: handler.go
subdomain-http-server/notfound/: notfound.html
subdomain-http-server/ryan/: index.html  visitors.html
subdomain-http-server/sheldon/: index.html
subdomain-http-server/static/: notfound.html
test-vue/: package-lock.json  package.json
test-vue/public/: index.html
test-vue/src/: App.vue
text-template/: Makefile
text-template/cmd/: text-template.go
wasm/: index.html
wasm/collision-system/: CMakeLists.txt  README.md  collision-system.html
wasm/collision-system/src/: ball.cpp  ball.h  collision-system.cpp  collision-system.h  event.cpp  event.h  main.cpp  main.h
wasm/fractal-circle/: CMakeLists.txt  README.md  fractal-circle.html
wasm/fractal-circle/src/: fractal-circle.cpp  main.cpp
wasm/graph-color/: CMakeLists.txt  README.md  graph-color.html
wasm/graph-cycle/: Makefile  graph-cycle.html  main.go
wasm/graph-reachability/: Makefile  graph-reachability.html  main.go
wasm/h-tree/: CMakeLists.txt  h-tree.html  install.sh
wasm/h-tree/src/: h-tree.c  main.c
wasm/julia-set/: CMakeLists.txt  README.md  julia-set.html
wasm/kd-tree/: Makefile  kd-tree.html  main.go
wasm/koch-snowflake/: Makefile  go.mod  koch-snowflake.html  main.go
wasm/minimum-spanning-tree/: CMakeLists.txt  README.md  minimum-spanning-tree.html
wasm/shortest-path/: CMakeLists.txt  README.md  shortest-path.html
wasm/shortest-path/src/: dijkstra-shortest-path.cpp  dijkstra-shortest-path.h  edge-weighted-digraph.cpp  edge-weighted-digraph.h  edge.cpp  edge.h  main.cpp  main.h  vertex.cpp  vertex.h
wasm/shortest-path/src/sdl-helpers/: circle.h
(+178 files in other folders)
